# LuaJIT-SDL2

./: .gitmodules  CMakeLists.txt  README.md  sdl2_ffi.lua  sdlAudioPlayer.lua
generator/: cpp2ffi.lua  generator.bat  generator.lua  sdl2_ffi.lua
test/audio/: audiodrivers.lua  audiotest.lua  loopwave.lua  multi_sndfile_player.lua  multi_sndfile_player_gui.lua  sndfile_player.lua  test-wav_async.lua
test/threads/: main.lua  main2.lua  main_atomic.lua
test/video/: test-bmp.lua
